--- a/.mogenius/Dev.yaml
+++ b/.mogenius/Dev.yaml
@@ -6,15 +6,13 @@ dockerfileName: Dockerfile
 dockerContext: .
 k8sSettings:
   limitCpuCores: 0.3
-  limitMemoryMB: 111
+  limitMemoryMB: 75
   ephemeralStorageMB: 50
   replicaCount: 1
   deploymentStrategy: recreate
   imagePullPolicy: IfNotPresent
   probesOn: false
-envVars:
-  - name: keytothavault
-    type: KEY_VAULT
+envVars: []
 ports:
   - portType: HTTPS
     internalPort: 8080
