--- a/.mogenius/Dev.yaml
+++ b/.mogenius/Dev.yaml
@@ -5,11 +5,11 @@ gitBranch: Dev
 dockerfileName: Dockerfile
 dockerContext: .
 k8sSettings:
-  limitCpuCores: 0.4
-  limitMemoryMB: 2
+  limitCpuCores: 0.3
+  limitMemoryMB: 80
   ephemeralStorageMB: 50
   replicaCount: 1
-  deploymentStrategy: rolling
+  deploymentStrategy: recreate
   imagePullPolicy: IfNotPresent
   probesOn: false
 envVars: []
