--- a/.mogenius/Dev.yaml
+++ b/.mogenius/Dev.yaml
@@ -9,7 +9,7 @@ k8sSettings:
   limitMemoryMB: 80
   ephemeralStorageMB: 50
   replicaCount: 1
-  deploymentStrategy: rolling
+  deploymentStrategy: recreate
   imagePullPolicy: IfNotPresent
   probesOn: false
 envVars: []
